--- a/ux.html
+++ b/ux.html
@@ -7,3 +7,11 @@
     <link rel="stylesheet" href="styles/styles.css">
 
 </head>
+
+<body>
+
+<H1>UX van HTML</H1>
+<h2 id="links">Links</h2>
+<a href="ux.html">UX van HTML</a>
+
+</body>
