--- a/ux.html
+++ b/ux.html
@@ -12,6 +12,6 @@
 
 <H1>UX van HTML</H1>
 <h2 id="links">Links</h2>
-<a href="ux.html" download>UX van HTML</a>
+<a href="ux.html" download target="_blank">UX van HTML</a>
 
 </body>
