--- a/ux.html
+++ b/ux.html
@@ -18,6 +18,6 @@
 <a href="ux.html" download target="_blank">UX van HTML</a>
 <a href="ux.html" download target="_blank">UX van HTML</a>
 <a href="ux.html" download target="_blank">UX van HTML</a>
-<button>Knop</button>
+<a href="#links">
 
 </body>
