--- a/ux.html
+++ b/ux.html
@@ -20,4 +20,7 @@
 <a href="ux.html" download target="_blank">UX van HTML</a>
 <a href="#links">
 
+
+<h2 id="afbeeldingen">Afbeeldingen</h2>
+<a href="ux.html"><img width="200" height="100"></a>
 </body>
