--- a/ux.html
+++ b/ux.html
@@ -18,9 +18,28 @@
 <a href="ux.html" download target="_blank">UX van HTML</a>
 <a href="ux.html" download target="_blank">UX van HTML</a>
 <a href="ux.html" download target="_blank">UX van HTML</a>
-<a href="#links">
+<a href="#links"> </a>
 
 
 <h2 id="afbeeldingen">Afbeeldingen</h2>
-<a href="ux.html"><img width="200" height="100"></a>
+<a href="ux.html"><img width="200" height="100"><alt="UX van HTML"></a>
+
+<a href="ux.html"><img alt="UX van HTML">UX van HTML</a>
+
+<h2 id="labels">Labels</h2>
+<fieldset>
+  <legend>Docenten</legend>
+  <ul>
+    <li><input type="checkbox"> Cyd</li>
+    <li><input type="checkbox"> Dorien</li>
+    <li><input type="checkbox"> Gwen</li>
+    <li><input type="checkbox"> Jad</li>
+    <li><input type="checkbox"> Joost</li>
+    <li><input type="checkbox"> Justus</li>
+    <li><input type="checkbox"> Koop</li>
+    <li><input type="checkbox"> Krijn</li>
+    <li><input type="checkbox"> Sanne</li>
+    <li><input type="checkbox"> Suus</li>
+  </ul>
+</fieldset>
 </body>
