--- a/form-types-and-attributes.html
+++ b/form-types-and-attributes.html
@@ -43,7 +43,7 @@
   <p>required zorgt ervoor dat een veld verplicht wordt en je dus niet verder kan totdat hij is ingevuld.</p>
   <fieldset>
   <label for="wachtwoord">wachtwoord:</label><br>
-  <input type="password" required />
+  <input type="password" required>
   <id="wachtwoord" name="wachtwoord"><br>
   <input type="submit" value="Submit">
   </fieldset>
