--- a/form-types-and-attributes.html
+++ b/form-types-and-attributes.html
@@ -60,3 +60,9 @@
   <p>Step bepaalt in hoe grote stappen een numerieke input kan verplaatsen</p>
   <label for="quantity">Nummers in stappen van 2</label>
   <input type="number" id="quantity" name="quantity" step="2"><br><br>
+
+
+  <form>
+  <label>Zoekterm <input required></label>
+  <button type="submit">Zoek!</button>
+</form>
