--- a/form-types-and-attributes.html
+++ b/form-types-and-attributes.html
@@ -64,5 +64,25 @@
 
   <form>
   <label>Zoekterm <input required></label>
-  <button type="submit">Zoek!</button>
+  <button type="submit" id="reqinput">Zoek!</button>
 </form>
+
+<form>
+  <label>Zoekterm <input required></label>
+  <button type="submit" id="reqinputs">Zoek!</button>
+</form>
+
+<script type="module">
+// Stap 1: zoek de input en stop die in een variabele
+let inputElement = document.querySelector('#reqinput');
+
+// Stap 2: luister naar het invalid event, en wacht tot dat afgevuurd wordt..
+inputElement.addEventListener('invalid', function(ev) {
+
+  // Stap 3: pas de tekst in de validatiemelding aan
+  inputElement.setCustomValidity('Dit veld mag niet leeg zijn hoor..');
+
+});
+</script>
+
+</script>
