--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <img src="AssetsLJ/doekal.png" class="midlayer" id="Doekal">
 
         <a href="https://github.com/Caitlin-fdnd">
-            <img src="AssetsLJ/Object1.png" class="midlayer" id="Object1">
+            <img src="AssetsLJ/Object1.png" class="midoblayer" id="Object1">
         </a>
-        
-        <img src="AssetsLJ/Object2.png" class="midlayer" id="Object2">
-        <img src="AssetsLJ/Object3.png" class="midlayer" id="Object3">
+
+        <img src="AssetsLJ/Object2.png" class="midoblayer" id="Object2">
+        <img src="AssetsLJ/Object3.png" class="midoblayer" id="Object3">
         <img src="AssetsLJ/moon.png" class="backlayer" id="Maan">
         <img src="AssetsLJ/bg2.2.png" class="backlayer" id="Achtergrond">
     </section>
